# skynet

./: .gitignore  README.md  pyproject.toml  requirements.txt  skynet_plan.md  smoke_test.py  verify.py
gateway/: .env.example  __init__.py  client.py  config.py  providers.py
skynet_home/: SOUL.md  config.yaml
skynet_home/knowledge_source/: attention-is-all-you-need.md  flash-attention.md  retrieval-augmented-generation.md
skynet_home/logs/: activity.jsonl
skynet_home/users/default/: MEMORY.md  USER.md  acl.yaml
skynet_home/users/default/sessions/: 103b46554911.jsonl  84f0d6abca15.jsonl  adf062e892c1.jsonl  d406ad2f6a52.jsonl
src/skynet/: __init__.py  config.py  runtime.py
src/skynet/core/: __init__.py  approval.py  context_compressor.py  events.py  loop.py  memory_manager.py  prompt_builder.py  scrub.py  tokens.py  types.py
src/skynet/ingestion/: parsers.py  scanner.py
src/skynet/kb/: notes.py
src/skynet/providers/: base.py  mock_provider.py  zai_provider.py
src/skynet/retrieval/: base.py  bm25_retriever.py
src/skynet/tools/: registry.py
src/skynet/tui/: app.py
src/skynet/tui/widgets/: activity_feed.py  approval_modal.py  chat_pane.py  kb_tree.py
