[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "skynet"
version = "0.1.0"
description = "Self-evolving, chat-first knowledge base for the terminal."
requires-python = ">=3.10"
dependencies = [
    "langchain>=0.1",
    "langchain-openai>=0.1",
    "openai>=1.0",
    "python-dotenv>=1.0",
    "PyYAML>=6.0",
    "rank_bm25>=0.2.2",
    "python-frontmatter>=1.0",
    "PyMuPDF>=1.23",
    "textual>=0.50",
]

[project.optional-dependencies]
bedrock = ["langchain-aws>=0.1", "boto3>=1.34"]

[project.scripts]
skynet = "skynet.tui.app:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
skynet = ["py.typed"]
